Update pom.xml, MotorBusquedaDaxSparc.java, MotorBusquedaDaxVector.java, and 11 more files