@@ -1,36 +1,75 @@
 package com.asbestosstar.crashdetector.bajo.vectorapi;
 
-public class VectorAPIInit {
+/**
+ * Detecta si la Vector API real está disponible.
+ *
+ * Si encuentra StubChecker, las clases de jdk.incubator.vector proceden del JAR
+ * de stubs y no deben usarse en tiempo de ejecución.
+ */
+public final class VectorAPIInit {
 
-	private static final String CLASE_VECTOR_API = "jdk.incubator.vector.IntVector";
+	private static final String CLASE_VECTOR_API = "jdk.incubator.vector.ByteVector";
+
+	private static final String CLASE_STUB = "jdk.incubator.vector.StubChecker";
+
 	private static final String ARG_ADD_MODULE = "--add-modules=jdk.incubator.vector";
 
-	/**
-	 * Devuelve true si el JDK parece tener el modulo incubador Vector API.
-	 *
-	 * En Java 8 normalmente sera false.
-	 */
-	public static boolean vectorAPIDisponible() {
-		try {
-			Class.forName(CLASE_VECTOR_API, false, ClassLoader.getSystemClassLoader());
-			return true;
-		} catch (Throwable t) {
-			return false;
-		}
+	private VectorAPIInit() {
 	}
 
 	/**
-	 * Si el codigo va a usar jdk.incubator.vector, normalmente necesita:
-	 * --add-modules=jdk.incubator.vector
+	 * Devuelve true solamente cuando está disponible la Vector API real.
 	 *
-	 * No lo agregamos si la clase ya es visible.
+	 * Devuelve false cuando: - está presente únicamente el JAR de stubs; - el
+	 * módulo Vector API no fue añadido; - la versión de la API es incompatible; -
+	 * ocurre un error de enlace.
+	 */
+	public static boolean vectorAPIDisponible() {
+		ClassLoader cargador = VectorAPIInit.class.getClassLoader();
+
+		/*
+		 * Comprobar primero el marcador de los stubs.
+		 *
+		 * Aunque ByteVector también exista, la presencia de StubChecker significa que
+		 * no debemos usar esas clases.
+		 */
+		if (claseDisponible(CLASE_STUB, cargador)) {
+			return false;
+		}
+
+		return claseDisponible(CLASE_VECTOR_API, cargador);
+	}
+
+	/**
+	 * Indica si el JAR de stubs está visible en tiempo de ejecución.
+	 */
+	public static boolean stubsPresentes() {
+		return claseDisponible(CLASE_STUB, VectorAPIInit.class.getClassLoader());
+	}
+
+	/**
+	 * Indica si probablemente hace falta añadir el módulo incubador.
 	 */
 	public static boolean necesitaArgEspecialVectorAPI() {
-		return !vectorAPIDisponible() && javaMayorOIgual(16);
+		return !stubsPresentes() && !vectorAPIDisponible() && javaMayorOIgual(16);
 	}
 
 	public static String obtenerArgEspecialVectorAPI() {
 		return ARG_ADD_MODULE;
+	}
+
+	private static boolean claseDisponible(String nombre, ClassLoader cargador) {
+
+		try {
+			Class.forName(nombre, false, cargador);
+			return true;
+		} catch (ClassNotFoundException e) {
+			return false;
+		} catch (LinkageError e) {
+			return false;
+		} catch (SecurityException e) {
+			return false;
+		}
 	}
 
 	private static boolean javaMayorOIgual(int minimo) {
@@ -47,7 +86,7 @@ public class VectorAPIInit {
 			}
 
 			return mayor >= minimo;
-		} catch (Throwable t) {
+		} catch (RuntimeException e) {
 			return false;
 		}
 	}
